fixed spacing

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,7 +1,7 @@
 #canvas {
     background: url(../images/wall2.jpg);
     position: absolute;
-    top: 67%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
     box-shadow: -3px 2px 9px 6px black;
@@ -17,7 +17,7 @@ body {
 
 
 #start {
-    top: 56%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
     position: absolute;
@@ -39,7 +39,7 @@ body {
     border: 5px solid black;
 
     display: none;  
-    top: 67%;
+    top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
     position: absolute;
@@ -69,6 +69,7 @@ body {
 nav {
     display: flex;                                                                       
     justify-content: center;
+    height: 100px;
 }
 
 ul {
@@ -146,7 +147,7 @@ i {
     position: absolute;
     width: 130px;
     height: 60px;
-    top: 22%;
+    top: 20%;
     left: 30%;
     padding-top: 7px;
     font-weight: bold;
